# bb-playground

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  reformat.sh
.github/workflows/: master.yaml  pull-requests.yaml
cmd/bonanza_bazel/: BUILD.bazel  main.go
cmd/bonanza_builder/: BUILD.bazel  main.go
cmd/bonanza_scheduler/: BUILD.bazel  main.go
cmd/bonanza_storage_frontend/: BUILD.bazel  main.go
cmd/bonanza_storage_shard/: BUILD.bazel  main.go
cmd/bonanza_worker/: BUILD.bazel  main.go
cmd/create_x25519_client_certificate/: BUILD.bazel  main.go
cmd/mount_directory/: BUILD.bazel  main.go
cmd/playground_bazel/: BUILD.bazel  main.go
cmd/playground_builder/: BUILD.bazel  main.go
cmd/playground_scheduler/: BUILD.bazel  main.go
cmd/playground_storage_frontend/: BUILD.bazel  main.go
cmd/playground_storage_shard/: BUILD.bazel  main.go
cmd/playground_worker/: BUILD.bazel  main.go
cmd/upload_directory/: BUILD.bazel  main.go
deployments/demo/: BUILD.bazel  bb_runner.jsonnet  bonanza_bazel.cert.pem  bonanza_bazel.key.pem  bonanza_builder.jsonnet  bonanza_scheduler.jsonnet  bonanza_storage_frontend.jsonnet  bonanza_storage_shard.jsonnet  bonanza_worker.jsonnet  demo.sh  playground_builder.jsonnet  playground_scheduler.jsonnet  playground_storage_frontend.jsonnet  playground_storage_shard.jsonnet  playground_worker.jsonnet
patches/com_github_bluekeyes_go_gitdiff/: no-drop-a-b-slash.diff
patches/com_github_buildbarn_bb_storage/: no-golint.diff
patches/go_sdk/: x25519.diff
patches/net_starlark_go/: dict-get-pop.diff  function-saving.diff  getattr-error-checking.diff  octal.diff  thread.diff  unwrap.diff
pkg/bazelclient/arguments/: BUILD.bazel  bazel_rc_reader.go  bazel_rc_reader_test.go  errors.go  get_bazel_rc_paths.go  get_bazel_rc_paths_test.go  parse.go  parse_bazel_rc_files.go  parse_bazel_rc_files_test.go  parse_command_and_arguments.go  parse_command_and_arguments_test.go  parse_startup_flags_test.go  parse_test.go
pkg/bazelclient/arguments/generator/: BUILD.bazel  definitions.go  flag_type.go  main.go
pkg/bazelclient/commands/: BUILD.bazel  util.go
pkg/bazelclient/commands/info/: BUILD.bazel  do_info.go
pkg/bazelclient/commands/license/: BUILD.bazel  do_license.go
pkg/bazelclient/commands/version/: BUILD.bazel  do_version.go
pkg/bazelclient/logging/: BUILD.bazel  console_logger.go  escape_sequences.go  logger.go
pkg/compress/simplelzw/: BUILD.bazel  compress.go  compress_test.go  decompress.go  decompress_test.go
pkg/diff/: BUILD.bazel  diff_test.go  find_text_fragment_offsets_bytes.go  replace_text_fragments.go
pkg/diff/testdata/: 0001-output  0002-output  0002-patch  0003-output  0003-patch
pkg/ds/: BUILD.bazel  slice.go
pkg/encoding/: BUILD.bazel  binary_encoder.go  chained_binary_encoder_test.go  configuration.go  deterministic_encrypting_binary_encoder_test.go  lzw_compressing_binary_encoder.go  lzw_compressing_binary_encoder_test.go
pkg/encoding/float16/: BUILD.bazel  float16.go  float16_test.go
pkg/encoding/varint/: BUILD.bazel  backward.go  backward_test.go  forward.go  forward_test.go  size_bytes.go
pkg/evaluation/: BUILD.bazel  computer.go  environment.go  fully_compute_value.go  fully_compute_value_test.go
pkg/evaluation/generate_computer/: BUILD.bazel  main.go
pkg/glob/: BUILD.bazel  compile.go  compile_test.go
pkg/label/: BUILD.bazel  apparent_label.go  apparent_label_test.go  apparent_repo.go  apparent_target_pattern.go  canonical_label.go  canonical_label_test.go  canonical_package.go  canonical_package_test.go  canonical_repo.go  canonical_repo_test.go  canonical_starlark_identifier.go  canonical_starlark_identifier_test.go  canonical_target_pattern.go  canonical_target_pattern_test.go  label.go  label_test.go  module.go  module_extension.go  module_instance.go  module_version.go  module_version_test.go  resolved_label.go  resolved_label_test.go  starlark_identifier.go  target_name.go
pkg/model/analysis/: BUILD.bazel  action_result.go  all_module_instances.go  base_computer.go  canonical_repo_name.go  command_encoders.go  compatible_execution_platforms.go  compatible_toolchains_for_type.go  compiled_bzl_file.go  computer.json  configured_rule.go  configured_target.go  directory_creation_parameters.go  directory_dereferencers.go  directory_readers.go  file_access_parameters.go  file_creation_parameters.go  file_properties_value.go  file_reader.go  files_in_package.go  glob.go  http_archive_contents.go  http_file_contents.go  module_dot_bazel_contents.go  module_extension.go  module_extension_repo.go  module_extension_repo_names.go  module_extension_repos.go  module_final_build_list.go  package.go  (+24 more)
pkg/remoteexecution/: BUILD.bazel  client.go
pkg/remoteworker/: BUILD.bazel  client.go  executor.go
pkg/scheduler/: BUILD.bazel  in_memory_build_queue.go
pkg/scheduler/initialsizeclass/: BUILD.bazel  action_timeout_extractor.go  action_timeout_extractor_test.go  analyzer.go  configuration.go  fallback_analyzer.go  fallback_analyzer_test.go
pkg/scheduler/invocation/: BUILD.bazel  authentication_metadata_key_extractor.go  configuration.go  key.go  key_extractor.go
pkg/scheduler/routing/: BUILD.bazel  action_router.go  configuration.go  simple_action_router.go
pkg/search/: BUILD.bazel  multi_search_and_replacer.go  multi_search_and_replacer_test.go
pkg/starlark/: BUILD.bazel  parse_module_dot_bazel.go  parse_module_dot_bazel_test.go
pkg/starlark/unpack/: BUILD.bazel  any.go  apparent_label.go  apparent_repo.go  apparent_target_pattern.go  bind.go  bool.go  canonicalize.go  decay.go  dict.go  if_non_empty_string.go  if_not_none.go  int.go  label.go  list.go  module.go  module_version.go  or.go  path_parser.go  pointer.go  singleton.go  starlark_identifier.go  string.go  stringer.go  target_name.go  type.go  url.go
pkg/sync/: BUILD.bazel  condition_variable.go
starlark/bazel_tools/: MODULE.bazel
starlark/builtins_bzl/: MODULE.bazel
starlark/builtins_core/: exports.bzl
tools/: BUILD.bazel  tools.go
tools/github_workflows/: github_workflows.jsonnet
(+335 files in other folders)
