module(name = "com_github_buildbarn_bonanza")

bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "com_github_buildbarn_bb_remote_execution")
bazel_dep(name = "com_github_buildbarn_bb_storage")
bazel_dep(name = "com_github_buildbarn_go_xdr")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

git_override(
    module_name = "bazel_remote_apis",
    commit = "7f922028fcfac63bdd8431e68de152d9e7a9e2a0",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_remote_execution",
    commit = "ca77ec14e14dd5d5569bde757dc7b6743496e198",
    remote = "https://github.com/buildbarn/bb-remote-execution.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_storage",
    commit = "85aafcb236ac1365a693d9390a6813db99dbaa0f",
    remote = "https://github.com/buildbarn/bb-storage.git",
)

git_override(
    module_name = "com_github_buildbarn_go_xdr",
    commit = "236788cf9e8948a1e8875c7dd243e2be180cdfd7",
    remote = "https://github.com/buildbarn/go-xdr.git",
)

single_version_override(
    module_name = "jsonnet",
    patches = ["//:patches/jsonnet/bazel-8.diff"],
)

git_override(
    module_name = "rules_antlr",
    commit = "89a29cca479363a5aee53e203719510bdc6be6ff",
    patches = [
        "//:patches/rules_antlr/antlr-4.10.diff",
        "//:patches/rules_antlr/bzlmod.diff",
    ],
    remote = "https://github.com/marcohu/rules_antlr.git",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    patches = ["//:patches/go_sdk/x25519.diff"],
    version = "1.24.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_bluekeyes_go_gitdiff",
    "com_github_buildbarn_go_cdc",
    "com_github_google_uuid",
    "com_github_kballard_go_shellquote",
    "com_github_prometheus_client_golang",
    "com_github_secure_io_siv_go",
    "com_github_seehuhn_mt19937",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "net_starlark_go",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_lint",
    "org_golang_x_sync",
    "org_golang_x_term",
    "org_uber_go_mock",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patches = [
        "//:patches/com_github_bluekeyes_go_gitdiff/no-drop-a-b-slash.diff",
    ],
    path = "github.com/bluekeyes/go-gitdiff",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_sys/o-search.diff"],
    path = "golang.org/x/sys",
)
go_deps_dev.module_override(
    patches = [
        "@com_github_buildbarn_bb_remote_execution//:patches/org_uber_go_mock/generics.diff",
        "@com_github_buildbarn_bb_storage//:patches/org_uber_go_mock/mocks-for-funcs.diff",
    ],
    path = "go.uber.org/mock",
)
go_deps_dev.module_override(
    patches = [
        "//:patches/net_starlark_go/thread.diff",
        "//:patches/net_starlark_go/dict-get-pop.diff",
        "//:patches/net_starlark_go/function-saving.diff",
        "//:patches/net_starlark_go/getattr-error-checking.diff",
        "//:patches/net_starlark_go/octal.diff",
        "//:patches/net_starlark_go/unwrap.diff",
    ],
    path = "go.starlark.net",
)
go_deps_dev.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cncf/xds/go",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain_llvm")
