load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bonanza_bazel_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bonanza/cmd/bonanza_bazel",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/bazelclient/arguments",
        "//pkg/bazelclient/commands/build",
        "//pkg/bazelclient/commands/info",
        "//pkg/bazelclient/commands/license",
        "//pkg/bazelclient/commands/version",
        "//pkg/bazelclient/logging",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
    ],
)

go_binary(
    name = "bonanza_bazel",
    embed = [":bonanza_bazel_lib"],
    visibility = ["//visibility:public"],
)
