load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bonanza_builder_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bonanza/cmd/bonanza_builder",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/evaluation",
        "//pkg/model/analysis",
        "//pkg/model/core",
        "//pkg/model/encoding",
        "//pkg/proto/configuration/bonanza_builder",
        "//pkg/proto/model/analysis",
        "//pkg/proto/model/build",
        "//pkg/proto/model/command",
        "//pkg/proto/remoteexecution",
        "//pkg/proto/remoteworker",
        "//pkg/proto/storage/dag",
        "//pkg/proto/storage/object",
        "//pkg/remoteexecution",
        "//pkg/remoteworker",
        "//pkg/storage/dag",
        "//pkg/storage/object",
        "//pkg/storage/object/grpc",
        "//pkg/storage/object/namespacemapping",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/http",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_x_sync//semaphore",
    ],
)

go_binary(
    name = "bonanza_builder",
    embed = [":bonanza_builder_lib"],
    visibility = ["//visibility:public"],
)
