load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bonanza_storage_shard_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bonanza/cmd/bonanza_storage_shard",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/configuration/bonanza_storage_shard",
        "//pkg/proto/storage/object",
        "//pkg/proto/storage/tag",
        "//pkg/storage/object",
        "//pkg/storage/object/leasemarshaling",
        "//pkg/storage/object/local",
        "//pkg/storage/object/namespacemapping",
        "//pkg/storage/tag",
        "//pkg/storage/tag/leasemarshaling",
        "//pkg/storage/tag/local",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bonanza_storage_shard",
    embed = [":bonanza_storage_shard_lib"],
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bonanza_storage_shard_container",
    binary = ":bonanza_storage_shard",
)

container_push_official(
    name = "bonanza_storage_shard_container_push",
    component = "bonanza-storage-shard",
    image = ":bonanza_storage_shard_container",
)
