load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mount_directory_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-playground/cmd/mount_directory",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/encoding",
        "//pkg/model/filesystem",
        "//pkg/model/filesystem/virtual",
        "//pkg/model/parser",
        "//pkg/proto/configuration/mount_directory",
        "//pkg/proto/model/filesystem",
        "//pkg/proto/storage/object",
        "//pkg/storage/object",
        "//pkg/storage/object/grpc",
        "//pkg/storage/object/namespacemapping",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/virtual/configuration",
        "@com_github_buildbarn_bb_storage//pkg/eviction",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "mount_directory",
    embed = [":mount_directory_lib"],
    visibility = ["//visibility:public"],
)
