load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "playground_bazel_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-playground/cmd/playground_bazel",
    visibility = ["//visibility:private"],
    deps = ["//pkg/bazelclient/arguments"],
)

go_binary(
    name = "playground_bazel",
    embed = [":playground_bazel_lib"],
    visibility = ["//visibility:public"],
)
