load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "playground_builder_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-playground/cmd/playground_builder",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/evaluation",
        "//pkg/model/analysis",
        "//pkg/model/encoding",
        "//pkg/model/parser",
        "//pkg/proto/build",
        "//pkg/proto/configuration/playground_builder",
        "//pkg/proto/model/analysis",
        "//pkg/proto/model/build",
        "//pkg/proto/storage/object",
        "//pkg/storage/object",
        "//pkg/storage/object/grpc",
        "//pkg/storage/object/namespacemapping",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "playground_builder",
    embed = [":playground_builder_lib"],
    visibility = ["//visibility:public"],
)
