load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "playground_builder_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-playground/cmd/playground_builder",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/evaluation",
        "//pkg/model/analysis",
        "//pkg/model/encoding",
        "//pkg/proto/build",
        "//pkg/proto/configuration/playground_builder",
        "//pkg/proto/model/analysis",
        "//pkg/proto/storage/dag",
        "//pkg/proto/storage/object",
        "//pkg/storage/dag",
        "//pkg/storage/object",
        "//pkg/storage/object/grpc",
        "//pkg/storage/object/namespacemapping",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/http",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//semaphore",
    ],
)

go_binary(
    name = "playground_builder",
    embed = [":playground_builder_lib"],
    visibility = ["//visibility:public"],
)
