load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "upload_directory_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-playground/cmd/upload_directory",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/model/core",
        "//pkg/model/filesystem",
        "//pkg/proto/configuration/upload_directory",
        "//pkg/proto/model/filesystem",
        "//pkg/proto/storage/dag",
        "//pkg/storage/dag",
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_binary(
    name = "upload_directory",
    embed = [":upload_directory_lib"],
    visibility = ["//visibility:public"],
)
