sh_binary(
    name = "demo",
    srcs = ["demo.sh"],
    data = [
        ":bb_runner.jsonnet",
        ":bonanza_builder.jsonnet",
        ":bonanza_scheduler.jsonnet",
        ":bonanza_storage_frontend.jsonnet",
        ":bonanza_storage_shard.jsonnet",
        ":bonanza_worker.jsonnet",
        "//cmd/bonanza_builder",
        "//cmd/bonanza_scheduler",
        "//cmd/bonanza_storage_frontend",
        "//cmd/bonanza_storage_shard",
        "//cmd/bonanza_worker",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_runner",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
