load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "label",
    srcs = [
        "apparent_label.go",
        "apparent_repo.go",
        "canonical_label.go",
        "canonical_package.go",
        "canonical_repo.go",
        "canonical_starlark_identifier.go",
        "module.go",
        "module_instance.go",
        "module_version.go",
        "starlark_identifier.go",
        "target_name.go",
    ],
    importpath = "github.com/buildbarn/bb-playground/pkg/label",
    visibility = ["//visibility:public"],
)

go_test(
    name = "label_test",
    srcs = [
        "apparent_label_test.go",
        "canonical_label_test.go",
        "canonical_package_test.go",
        "canonical_repo_test.go",
        "module_version_test.go",
    ],
    deps = [
        ":label",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
